--- a/kibana/Dockerfile
+++ b/kibana/Dockerfile
@@ -1,5 +1,5 @@
 # https://github.com/elastic/kibana-docker
-FROM docker.elastic.co/kibana/kibana-oss:2.3.5
+FROM kibana
 
 # Add your kibana plugins setup here
 # Example: RUN kibana-plugin install <name|url>
