Kibana and logstash cfg changes

--- a/kibana/Dockerfile
+++ b/kibana/Dockerfile
@@ -1,5 +1,5 @@
 # https://github.com/elastic/kibana-docker
-FROM kibana
+FROM kibana:4.5
 
 # Add your kibana plugins setup here
 # Example: RUN kibana-plugin install <name|url>
